--- a/MisCursosXamarin/MisCursosXamarin/App.xaml
+++ b/MisCursosXamarin/MisCursosXamarin/App.xaml
@@ -19,7 +19,8 @@
 
 			<OnPlatform x:Key="LightFontFamily" x:TypeArguments="x:String">
 				<On Platform="iOS">HelveticaNeue-Light</On>
-				<On Platform="Android">sans-serif-light</On>
+				<!--<On Platform="Android">sans-serif-light</On>-->
+				<On Platform="Android">Caption</On>
 			</OnPlatform>
 
 			<OnPlatform x:Key="MediumFontFamily" x:TypeArguments="x:String">
@@ -33,6 +34,8 @@
 			<x:Double x:Key="TagTextFontSize">18</x:Double>
 			<x:Double x:Key="StatsNumberFontSize">20</x:Double>
 			<x:Double x:Key="StatsCaptionFontSize">16</x:Double>
+			<x:Double x:Key="StartNumberFontSize">16</x:Double>
+			<x:Double x:Key="StartCaptionFontSize">12</x:Double>
 			<x:Double x:Key="ButtonFontSize">14</x:Double>
 
 			<!--  styles  -->
@@ -65,6 +68,22 @@
 				<Setter Property="FontSize" Value="{StaticResource TagTextFontSize}" />
 				<Setter Property="HorizontalTextAlignment" Value="Center" />
 			</Style>
+
+			<Style x:Key="startProductNumber" TargetType="Label">
+				<Setter Property="TextColor" Value="{StaticResource HeaderTextColor}" />
+				<Setter Property="HorizontalTextAlignment" Value="Center" />
+				<Setter Property="FontFamily" Value="{StaticResource LightFontFamily}" />
+				<Setter Property="FontSize" Value="{StaticResource StartNumberFontSize}" />
+			</Style>
+
+			<Style x:Key="startProductLabel" TargetType="Label">
+				<Setter Property="TextColor" Value="{StaticResource BodyTextColor}" />
+				<Setter Property="Margin" Value="0,-5,0,0" />
+				<Setter Property="HorizontalTextAlignment" Value="Center" />
+				<Setter Property="FontFamily" Value="{StaticResource LightFontFamily}" />
+				<Setter Property="FontSize" Value="{StaticResource StartCaptionFontSize}" />
+			</Style>
+			
 
 			<Style x:Key="StatsNumberLabel" TargetType="Label">
 				<Setter Property="TextColor" Value="{StaticResource HeaderTextColor}" />
